updated website to init testing

--- a/HTML-CSS-JS/main.html
+++ b/HTML-CSS-JS/main.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
-<!-- Fridge Friend - Web App -->
+<!-- Fridge Friend - Web App
+Last Revision: KW 3/18/2020
+-->
+
 
 <html>
 	<head> 
@@ -16,32 +19,61 @@
 
 	<body>
 		<!-- Top main navigation bar -->
-		<nav class="main_nav">
-			<!--<a href="#about">About</a>-->
+		<div class="nav-bar">
+			<nav>
+				<a class="nav-logo" href="main.html">
+					<img class="logo-image" src="Images/Logo,%20Carrot%203.png">
+				</a>
+
+				<ul>
+					<li class="nav-item"> <a href="pantry.html"> Pantry </a> </li>
+					<li class="nav-item"> <a href="recipes.html"> Recipes </a> </li>
+					<li class="nav-item"> <a href="account.html"> Account </a> </li>
+				</ul>
+			</nav>
+			<!--<a href="#about">About</a>
 			<a href="pantry.html">PANTRY</a>
 			<b>Fridge Friend</b>
 			<a href="recipes.html">RECIPES</a>
-  		</nav>
+			-->
+  		</div>
   
  	 	<!-- Main page content -->
-  		<div class="section1">
-			<h1>Section One</h1>	
-			<h2>Pantry</h2>	
-			<h3>Possible layout:</h3>
-			<img src="Webpage1.png" alt="Web app design"> 
+		<div>What would you like to do today?</div>
+  		<div class="main">
+			<div class="fridge-link">
+				<a href="pantry.html">
+					<button type="button" class="btn">Check Fridge</button> </a>
+			</div>
+			<div class="fridge-image">
+				<img src="Images/fridge2.png">
+			</div>
+			<div class="shop-link">
+				<a href="shoppinglist.html">
+					<button type="button" class="btn">Make Shopping List</button></a>
+			</div>
+			<div class="shop-image">
+				<img src="Images/ShoopingBag.png">
+			</div>
+			<div class="recipe-link">
+				<a href="recipes.html">
+					<button type="button" class="btn">Find Recipes</button></a>
+			</div>
+			<div class="recipe-image">
+				<img src="Images/Recipes2.png">
+			</div>
   		</div>
 
 		<!-- Bottom nav bar -->
 		<div class="bottom_nav">
 			<nav>
-				<a href="#about">About</a>
-				<a href="pantry.html">Pantry</a>
-				<a href="recipes.html">Recipes</a>
-				<a href="#customerservice">Customer Service</a>
+				<ul>
+					<li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
+					<li class="foot-item"> <a href="recipes.html"> Recipes </a> </li>
+					<li class="foot-item"> <a href="account.html"> Account </a> </li>
+					<li class="foot-item"> <a href="contactus.html"> Contact Us </a> </li>
+				</ul>
 			</nav>
-			Copyright...
 		</div>
-
 	</body>
-
 <html>
