--- a/HTML-CSS-JS/recipes.html
+++ b/HTML-CSS-JS/recipes.html
@@ -9,10 +9,36 @@
 		<!-- Browser tab title -->
 		<title>Recipes</title>
 		<!-- External css file -->		
-		<link rel="stylesheet" type="text/css" href="main_style.css">
+		<link rel="stylesheet" type="text/css" href="recipes.css">
+        <link rel="stylesheet" type="text/css" href="main_style.css">
     </head>
     <body>
-        This is the page for recipes.
+    <!-- Top main navigation bar -->
+    <div class="nav-bar">
+        <nav>
+            <a class="nav-logo" href="main.html">
+                <img class="logo-image" src="Images/Logo,%20Carrot%203.png">
+            </a>
+            <ul>
+                <li class="nav-item"> <a href="pantry.html"> Pantry </a> </li>
+                <li class="nav-item"> <a href="recipes.html"> Recipes </a> </li>
+                <li class="nav-item"> <a href="account.html"> Account </a> </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="recipe-main">
+        <h2> Recipes </h2>
+    </div>
+    <!-- Bottom nav bar -->
+    <div class="bottom_nav">
+        <nav>
+            <ul>
+                <li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
+                <li class="foot-item"> <a href="recipes.html"> Recipes </a> </li>
+                <li class="foot-item"> <a href="account.html"> Account </a> </li>
+                <li class="foot-item"> <a href="contactus.html"> Contact Us </a> </li>
+            </ul>
+        </nav>
+    </div>
     </body>
-
     </html>
