--- a/HTML-CSS-JS/contactus.html
+++ b/HTML-CSS-JS/contactus.html
@@ -39,6 +39,9 @@
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message"></textarea>
             </li>
+            <li class = "form-btn">
+                <button type="submit"> Send Message </button>
+            </li>
         </ul>
     </form>
 </div>
