--- a/HTML-CSS-JS/shoppinglist.html
+++ b/HTML-CSS-JS/shoppinglist.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 <!-- Top main navigation bar -->
-<div class="nav-bar">
+<div class="nav">
     <nav>
         <a class="nav-logo" href="main.html">
-            <img class="logo-image" src="Images/Logo,%20Carrot%203.png">
+            <img class="header_logo" src="Images/Logo,%20Carrot%203.png">
         </a>
         <ul>
-            <li class="nav-item"> <a href="pantry.html"> Pantry </a> </li>
-            <li class="nav-item"> <a href="recipes.html"> Recipes </a> </li>
-            <li class="nav-item"> <a href="account.html"> Account </a> </li>
+            <li class="nav_item"> <a href="pantry.html"> Pantry </a> </li>
+            <li class="nav_item"> <a href="recipes.html"> Recipes </a> </li>
+            <li class="nav_item"> <a href="account.html"> Account </a> </li>
         </ul>
     </nav>
 </div>
