updated HTML and CSS

--- a/HTML-CSS-JS/account.html
+++ b/HTML-CSS-JS/account.html
@@ -30,7 +30,7 @@
     <h2> Account Management </h2>
 </div>
 <!-- Bottom nav bar -->
-<div class="bottom_nav">
+<div class="foot">
     <nav>
         <ul>
             <li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
