--- a/HTML-CSS-JS/contactus.html
+++ b/HTML-CSS-JS/contactus.html
@@ -46,7 +46,7 @@
     </form>
 </div>
 <!-- Bottom nav bar -->
-<div class="bottom_nav">
+<div class="foot">
     <nav>
         <ul>
             <li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
