--- a/HTML-CSS-JS/main.html
+++ b/HTML-CSS-JS/main.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 
 <!-- Fridge Friend - Web App
-Last Revision: KW 3/18/2020
+Last Revision: KW 4/14/2020
 -->
-
-
 <html>
 	<head> 
 		<meta charset="utf-8"> 
@@ -17,29 +15,28 @@ Last Revision: KW 3/18/2020
 		<link rel="stylesheet" type="text/css" href="main_style.css">
 		<link rel="stylesheet" type="text/css" href="responsive_styles.css">
 	</head>
-
-
 	<body>
 		<div class="header">
 			<div class="header_inner">
-				<img class="header_logo" src="Images/Carrot.png">
-				<h1 class = "header_title"> Fridge Friend </h1>
+				<a href="main.html">
+					<img class="header_logo" src="Images/Carrot.png" >
+					<h1 class = "header_title"> Fridge Friend </h1>
+				</a>
 			</div>
+			<!-- Top main navigation bar -->
+
+				<div class="nav">
+					<ul class="nav_list">
+						<li class="nav_item"> <a href="pantry.html"> Pantry </a> </li>
+						<li class="nav_item"> <a href="recipes.html"> Recipes </a> </li>
+						<li class="nav_item"> <a href="account.html"> Account </a> </li>
+					</ul>
+				</div>
+
 		</div>
-		<!-- Top main navigation bar -->
-		<div>
-			<nav class="nav">
-				<ul class="nav_list">
-					<li class="nav_item"> <a href="pantry.html"> Pantry </a> </li>
-					<li class="nav_item"> <a href="recipes.html"> Recipes </a> </li>
-					<li class="nav_item"> <a href="account.html"> Account </a> </li>
-				</ul>
-			</nav>
-  		</div>
+
   
  	 	<!-- Main page content -->
-		<div>What would you like to do today?</div>
-
   		<div class="main">
 			<div class="fridge-link">
 				<a href="pantry.html">
@@ -64,28 +61,8 @@ Last Revision: KW 3/18/2020
 			</div>
   		</div>
 
-		<!--
-		<div class="main2">
-			<div class="kitchen1">
-				<img src="Images/Asset%201.png">
-			</div>
-			<div class="recipe-link">
-				<a href="recipes.html">
-					<button type="button" class="btn">Find Recipes</button></a>
-			</div>
-			<div class="shop-link">
-				<a href="shoppinglist.html">
-					<button type="button" class="btn">Make Shopping List</button></a>
-			</div>
-			<div class="fridge-link">
-				<a href="pantry.html">
-					<button type="button" class="btn">Check Fridge</button></a>
-			</div>
-		</div>
-		-->
-
 		<!-- Bottom nav bar -->
-		<div class="bottom_nav">
+		<div class="foot">
 			<nav>
 				<ul>
 					<li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
