--- a/HTML-CSS-JS/pantry.html
+++ b/HTML-CSS-JS/pantry.html
@@ -31,7 +31,7 @@
         <h2> Welcome to your pantry </h2>
     </div>
     <!-- Bottom nav bar -->
-    <div class="bottom_nav">
+    <div class="foot">
         <nav>
             <ul>
                 <li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
