--- a/HTML-CSS-JS/recipes.html
+++ b/HTML-CSS-JS/recipes.html
@@ -30,7 +30,7 @@
         <h2> Recipes </h2>
     </div>
     <!-- Bottom nav bar -->
-    <div class="bottom_nav">
+    <div class="foot">
         <nav>
             <ul>
                 <li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
