--- a/HTML-CSS-JS/shoppinglist.html
+++ b/HTML-CSS-JS/shoppinglist.html
@@ -11,33 +11,37 @@
 </head>
 <body>
 <!-- Top main navigation bar -->
-<div class="nav">
-    <nav>
-        <a class="nav-logo" href="main.html">
-            <img class="header_logo" src="Images/Logo,%20Carrot%203.png">
-        </a>
-        <ul>
-            <li class="nav_item"> <a href="pantry.html"> Pantry </a> </li>
-            <li class="nav_item"> <a href="recipes.html"> Recipes </a> </li>
-            <li class="nav_item"> <a href="account.html"> Account </a> </li>
-        </ul>
-    </nav>
-</div>
-<div class="list-main">
-    <h2> Create your shopping list here </h2>
-</div>
-<!-- Bottom nav bar -->
-<div class="bottom_nav">
-    <nav>
-        <ul>
-            <li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
-            <li class="foot-item"> <a href="recipes.html"> Recipes </a> </li>
-            <li class="foot-item"> <a href="account.html"> Account </a> </li>
-            <li class="foot-item"> <a href="contactus.html"> Contact Us </a> </li>
-        </ul>
-    </nav>
-</div>
+    <div class="header">
+        <div class="header_inner">
+            <a href="main.html">
+                <img class="header_logo" src="Images/Carrot.png" >
+                <h1 class = "header_title"> Fridge Friend </h1>
+            </a>
+        </div>
+        <!-- Top main navigation bar -->
 
+        <div class="nav">
+            <ul class="nav_list">
+                <li class="nav_item"> <a href="pantry.html"> Pantry </a> </li>
+                <li class="nav_item"> <a href="recipes.html"> Recipes </a> </li>
+                <li class="nav_item"> <a href="account.html"> Account </a> </li>
+            </ul>
+        </div>
+    </div>
+    <div class="cart-main">
+        <h2> Create your shopping list here </h2>
+    </div>
+    <!-- Bottom nav bar -->
+    <div class="foot">
+        <nav>
+            <ul>
+                <li class="foot-item"> <a href="pantry.html"> Pantry </a> </li>
+                <li class="foot-item"> <a href="recipes.html"> Recipes </a> </li>
+                <li class="foot-item"> <a href="account.html"> Account </a> </li>
+                <li class="foot-item"> <a href="contactus.html"> Contact Us </a> </li>
+            </ul>
+        </nav>
+    </div>
 
 </body>
 </html>
